--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,40 @@
 
 .cotizadorMainContent {
   padding: 5%; }
+
+.cotizadorSimulador {
+  display: flex;
+  flex-wrap: wrap; }
+  .cotizadorSimulador > * {
+    width: calc(50% - 10px);
+    margin-right: 10px;
+    margin-bottom: 10px; }
+  .cotizadorSimulador > *:nth-child(3) {
+    width: 100%; }
+  .cotizadorSimulador > *:nth-child(4) {
+    width: 100%; }
+
+#cotizadorSimulador-form {
+  display: inline;
+  height: max-content; }
+  #cotizadorSimulador-form > * {
+    margin-top: 5%; }
+
+#selectedModelInfo {
+  padding: 5%;
+  height: auto;
+  text-align: center;
+  border: 3px solid #0dcaf0; }
+  #selectedModelInfo > img {
+    width: 100%;
+    height: auto; }
+
+#historialResultados > ul {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 5px; }
+
+#historialResultados > ul > li {
+  list-style-type: none;
+  padding: 2%;
+  width: fit-content; }
