--- a/css/scss/views/landing/landingHeroBanner.scss
+++ b/css/scss/views/landing/landingHeroBanner.scss
@@ -1,29 +1,34 @@
 .carousel-item-content{
-  display: flex;
+  display: block;
+  height: 60vh;
+  & a{
+    text-decoration: none;
+  }
+  &-text{
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(255,255,255,0) 30%, rgba(255,255,255,0) 100%);
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
   & img{
-        display: block;
-        width: 100%;
-        height: auto;
-    }
-}
-
-@media screen and (max-width: 480px) {
-  .carousel-item-content{
-    display: block;
-    height: fit-content;
-    position: relative;
-    &-text{
-      background: rgb(0,0,0);
-      background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(255,255,255,0) 30%, rgba(255,255,255,0) 100%);
-      padding-top: 5%;
-      padding-left: 5%;
-      padding-right: 5%;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+        margin: auto;
+        width: auto;
+        height: 90%;
     }
     
-  }
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  color: red;
 }
